--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -16,7 +16,10 @@
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
   }
-  
+
+.body {
+  background-color: var(--color-primary);
+}
 
 
 
