--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,8 @@
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
   }
+.body {
+    background-color: var(--color-primary) !important;
+    margin: 0;
+    padding: 0;
+  }
